<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".mvvm.view.activity.autenticacion.LoginActivity">

    <TextView
        android:shadowRadius="5"
        android:shadowDx="2"
        android:shadowDy="-2"
        android:shadowColor="@color/white"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTituloLogin"
        android:fontFamily="@font/bold"
        android:text="@string/inicioSesion"
        android:textColor="@color/white"
        android:textSize="@dimen/tituloLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:onClick="iniciarSesion"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login"
        android:clickable="true"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:paddingTop="12sp"
        android:paddingBottom="12sp"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textBtn"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutTelefono"
        app:layout_constraintStart_toStartOf="@+id/constraintLayoutTelefono"
        app:layout_constraintTop_toBottomOf="@+id/clCodigo" />

    <ProgressBar
        android:visibility="gone"
        android:indeterminate="true"
        android:id="@+id/pbCargando"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progresBtn"
        android:layout_height="@dimen/progresBtn"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:visibility="gone"
        android:fontFamily="@font/light"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorAcent"
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayoutTelefono"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTelefono" />

    <TextView
        android:visibility="gone"
        android:fontFamily="@font/light"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorAcent"
        android:id="@+id/tvMensaje2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/clCodigo"
        app:layout_constraintTop_toBottomOf="@+id/clCodigo" />


    <TextView
        android:textColor="@color/colorAcent"
        android:textSize="@dimen/textBtn"
        android:fontFamily="@font/semibold"
        android:id="@+id/tvCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/crearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/textGeneral"
        android:textColor="@color/textColor"
        android:text="@string/noTieneCuenta"
        app:layout_constraintBottom_toTopOf="@+id/tvCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTelefono">

        <ImageButton
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/ibCodigo"
            android:layout_width="@dimen/icDni"
            android:layout_height="@dimen/icDni"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:hint="@string/ingreseCodigo"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHint="@color/textcolorHint"
            android:textSize="@dimen/textGeneral"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ibCodigo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLinea"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etCodigo"
            app:layout_constraintTop_toBottomOf="@id/etCodigo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayoutTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTituloForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="@dimen/icDni"
            android:layout_height="@dimen/icDni"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_dni"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:hint="@string/numTelefono"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textColorHint="@color/textcolorHint"
            android:textSize="@dimen/textGeneral"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etTelefono"
            app:layout_constraintTop_toBottomOf="@id/etTelefono" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>